Fixed width issue on mobile

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,4 +4,5 @@
     place-items: center;
     flex-direction: column;
     justify-content: center;
+    min-width: none;
 }
